# fatmap

./: .gitignore  Dockerfile  docker-compose-development.yml  docker-compose-production.yml  project.env  pyproject.toml  server.py  server_bun.js  server_node.mjs
client/: client.py
server/: run.sh  server.py
